cmake_minimum_required(VERSION 3.20)

project(Pool
	VERSION 1.0
	LANGUAGES CXX)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	set(CMAKE_CXX_FLAGS "-Wno-address-of-temporary")
endif()

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Pool)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)

foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/Bin )
	set(CMAKE_${OUTPUTCONFIG}_POSTFIX ${OUTPUTCONFIG})
endforeach()

set(THIRD_PARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/3rdParty)
set(COMPILED_SHADERS_DIR ${CMAKE_CURRENT_LIST_DIR}/CompiledShaders)

find_package(Python COMPONENTS Interpreter)

set(SHADER_COMPILER_PY ${CMAKE_CURRENT_LIST_DIR}/Tools/ShaderCompiler.py)
add_custom_target(CompileShaders
	ALL ${Python_EXECUTABLE} ${SHADER_COMPILER_PY}
	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Tools
	SOURCES ${SHADER_COMPILER_PY})

add_subdirectory(Source)

add_dependencies(Pool CompileShaders)


